# libreflow

./: .gitattributes  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_RUST.txt  UI_AUDIT.md  bun.lockb  docker-compose.yml  jsconfig.json  package-lock.json  package.json  perf-baseline-bench.json  perf-budgets.json  run.sh  tsconfig.json  vite.config.js
.claude/: settings.json
.claude/hooks/: libreflow-gateguard.cjs
.claude/rules/common/: agents.md  code-review.md  coding-style.md  development-workflow.md  patterns.md  performance.md  security.md  testing.md
.github/workflows/: ci.yml  release.yml
app/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
app/src/: types.ts
app/src/components/: BoardView.svelte  List.svelte  ListView.svelte  Modal.svelte  Sidebar.astro  WorkspaceView.svelte
app/src/layouts/: Layout.astro
app/src/pages/: index.astro
cloudflare-worker/: worker.js  wrangler.toml
docs/: QA_CHECKLIST.md  a11y-manual-verification-runbook.md  responsive-contract.md
docs/audits/: ecc-bug-audit-2026-05-22.md  quality-audit-2026-05-23.md  responsive-audit-2026-05-22.md  sweep-status-2026-05-27.md
docs/superpowers/audits/: 2026-05-29-style-audit.md  ui-harmonization-audit.md
docs/superpowers/plans/: 2026-05-04-completion-polish.md  (+15 more)
frontend/: index.html  mini.html
frontend/src/: a11y.js  allplayerui.js  ambient.js  ambientRenderer.js  app.js  artLoader.js  artcolor.js  backup.js  bus.js  cdaudio.js  cdaudio_pure.cjs  cdaudio_pure.js  cfg.js  cfgsave.js  cinema.js  ctxmenu.js  db.js  design-system.css  devices.js  dom.js  dropin.js  dupes.js  eq.js  eqdevice.js  genres.js  handlers.js  i18n.js  imports.js  ipc.js  keynav.js  library.js  m3u.js  main.js  minioverlay.js  miniplayer.js  modal.js  motion.js  nowplaying.js  organize.js  orphans.js  (+32 more)
frontend/tests/: _a11y.cjs  _wcag.cjs  a11y.test.cjs  bench.cjs  core.test.cjs  theme-light-coverage.test.cjs  theme-palette.test.cjs  theme-tokens.test.cjs  token-source.test.cjs
nginx/: nginx.conf
postgres/: Dockerfile  main.sql
prisma/: schema.prisma
scripts/: _style-audit-shots.mjs  bench-compare.js  perf-baseline.js  perf-bundle.js
src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mini.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  cdaudio.rs  cdaudio_toc.rs  commands.rs  lib.rs  main.rs  mini.rs  taskbar.rs  watch.rs
src-tauri/tests/: cdaudio_toc_fuzz_test.rs  cdaudio_toc_test.rs
src/components/: AddWorkspaceButton.svelte  Header.svelte  LoginView.svelte  RegisterView.svelte  WorkspaceView.svelte
src/layouts/: Layout.astro  LoginLayout.astro
src/lib/: User.ts
src/modules/: SchemaModule.svelte
src/pages/: index.astro  login.astro  register.astro
(+33 files in other folders)
