[package]
name = "libreflow"
version = "1.1.0"
license = "MIT"
edition = "2021"

[lib]
name = "libreflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog          = "2"
tauri-plugin-fs              = "2"
tauri-plugin-notification    = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state    = "2"
tauri-plugin-updater         = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
base64                       = "0.22"
tokio                        = { version = "1", features = ["full"] }
lofty                        = "0.22"
rayon                        = "1"
notify                       = "6"
zip                          = "2"
flacenc                      = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[dev-dependencies]
proptest = "1.5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
incremental = true
